Added Contact page to include a php form

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -10,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/queries.css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-	  <!-- Fonts -->
+    <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Sintony:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -19,115 +20,124 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-		<header class="clearfix">
-		    <div class="logo col-md-3"><h2 class="logo-text">CFI CONTRERAS</h2></div>
-		    <nav class="clearfix">
-          <ul class="clearfix">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html" class="active">About Me</a></li>
-              <li><a href="introFlight.html">Intro Flight</a></li>
-              <li><a href="flightTraining.html">Flight Training</a></li>
-              <li><a href="#">Pictures</a></li>
-              <li><a href="#" class="last">contact</a></li>
-          </ul>
+</head>
+
+<body>
+    <header class="clearfix">
+        <div class="logo col-md-3">
+            <h2 class="logo-text">CFI CONTRERAS</h2></div>
+        <nav class="clearfix">
+            <ul class="clearfix">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html" class="active">About Me</a></li>
+                <li><a href="introFlight.html">Intro Flight</a></li>
+                <li><a href="flightTraining.html">Flight Training</a></li>
+                <li><a href="#">Pictures</a></li>
+                <li><a href="contact.html" class="last">contact</a></li>
+            </ul>
         </nav>
         <div class="pullcontainer">
-        <a href="#" id="pull"><i class="fa fa-bars fa-2x"></i></a>
+            <a href="#" id="pull"><i class="fa fa-bars fa-2x"></i></a>
         </div>
-		</header>
+    </header>
     <div class="banner">
-    <ul>
-        <li style="background-image: url('img/03.jpg');">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3">
-                <div class="hero-title">
-                  Flying should be fun and safe
+        <ul>
+            <li style="background-image: url('img/03.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div class="hero-title">
+                                Flying should be fun and safe
+                            </div>
+                            <p class="hero-content">Lessons are meant to educate and inspire</p>
+                        </div>
+                    </div>
                 </div>
-              <p class="hero-content">Lessons are meant to educate and inspire</p>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li style="background-image: url('img/04.jpg');">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3">
-                <div class="hero-title">
-                  Safety First
+            </li>
+            <li style="background-image: url('img/04.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div class="hero-title">
+                                Safety First
+                            </div>
+                            <p class="hero-content">but you will develop your passion for flying</p>
+                        </div>
+                    </div>
                 </div>
-              <p class="hero-content">but you will develop your passion for flying</p>
-              </div>
-            </div>
-          </div>
-        </li>
-    </ul>
-</div>
-    <div class="container">
-    <div class="arrow"></div>
+            </li>
+        </ul>
     </div>
-	<div class="h2-wrap">
-      <div class="container">
-        <div class="row">
-        <div class="col-md-12">
-          <h2 class="standard-block"><strong>Claudia Maciel-Contreras, M.S </strong><br />
+    <div class="container">
+        <div class="arrow"></div>
+    </div>
+    <div class="h2-wrap">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="standard-block"><strong>Claudia Maciel-Contreras, M.S </strong><br />
 		    <strong>CFI,  CFII, MEI</strong></h2>
-          </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
     <div class="text-inter">
-    <div class="container">
-      <div class="row">
-      <div class="col-md-12">
-        <img class="text-img" src="img/me.jpg" alt="Claudia Maciel-Contreras" />
-      </div>
-    </div>
-		<div class="row">
-        <div class="col-md-6">
-          <p>Hi, my name is Claudia and I  appreciate this opportunity to introduce myself. I&rsquo;ve enjoyed instructing for  several years now and have developed my own personal style of instruction which  focuses on adding &ldquo;fun&rdquo; into learning. While I do follow a training  syllabus in order to make sure that all areas of aeronautical knowledge and  flight training are covered, I consider it equally important that students get  a good exposure to the real-world aspects of flying _ the type of &ldquo;street  knowledge&rdquo; not found in text books, but gained only through experience.</p>
-          <p>I teach all levels of pilots, in single and multi-engine aircraft, from  students seeking their Private Pilot license all the way through Flight Instructor.</p>
-		  <p>I have dedicated my career to teaching others to fly. Your training will be  a combination of flight training and ground instruction focusing on the FAA  requirements, so that you are able to realize your goal as efficiently as  possible. Since, I am a full-time instructor; I can be available to accommodate  your schedule. When we are finished, you will be a safe and confident pilot.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <img class="text-img" src="img/me.jpg" alt="Claudia Maciel-Contreras" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <p>Hi, my name is Claudia and I appreciate this opportunity to introduce myself. I&rsquo;ve enjoyed instructing for several years now and have developed my own personal style of instruction which focuses on adding &ldquo;fun&rdquo; into
+                        learning. While I do follow a training syllabus in order to make sure that all areas of aeronautical knowledge and flight training are covered, I consider it equally important that students get a good exposure to the real-world
+                        aspects of flying _ the type of &ldquo;street knowledge&rdquo; not found in text books, but gained only through experience.</p>
+                    <p>I teach all levels of pilots, in single and multi-engine aircraft, from students seeking their Private Pilot license all the way through Flight Instructor.</p>
+                    <p>I have dedicated my career to teaching others to fly. Your training will be a combination of flight training and ground instruction focusing on the FAA requirements, so that you are able to realize your goal as efficiently as possible.
+                        Since, I am a full-time instructor; I can be available to accommodate your schedule. When we are finished, you will be a safe and confident pilot.</p>
+                </div>
+                <div class="col-md-6">
+                    <p>In addition to primary training, I can take you further in your flying goals with an instrument rating, a multi-engine rating, a Commercial license, or an Airline Transport Pilot rating. I also prepare pilots to fly in challenging
+                        environments such as mountain flying, high-altitude and complex / high performance aircraft.</p>
+                    <p>So whether you want to take your first flight, continue your flight training, or tune-up unused skills, contact me and we will take that first flight together. I am passionate about flying and I want you to be too.</p>
+                    <p>Picking an instructor who is right for you is probably the most important decision you will make, as it will weigh heavily in determining the success you have in acheiving your goal. I look forward to being able to sit down and talk
+                        with you one-on-one, or perhaps spend a few minutes on the phone if that&rsquo;s more convenient. Either way, I&rsquo;d like to do whatever I can to help you get off to the best start possible.</p>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6">
-          <p>In addition to primary training, I can take you further in your flying goals  with an instrument rating, a multi-engine rating, a Commercial license, or an  Airline Transport Pilot rating. I also prepare pilots to fly in challenging  environments such as mountain flying, high-altitude and complex / high  performance aircraft.</p>
-		  <p>So whether you want to take your first flight, continue your flight  training, or tune-up unused skills, contact me and we will take that first  flight together. I am passionate about flying and I want you to be too.</p>
-		  <p>Picking an instructor who is right  for you is probably the most important decision you will make, as it will weigh  heavily in determining the success you have in acheiving your goal. I look forward  to being able to sit down and talk with you one-on-one, or perhaps spend a few  minutes on the phone if that&rsquo;s more convenient. Either way, I&rsquo;d like to do  whatever I can to help you get off to the best start possible.</p>
-        </div>
-      </div>
-    </div>
     </div>
     <div class="shadow"></div>
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <h2>CFI CONTRERAS</h2>
-          </div>
-          <div class="col-md-5">
-            <p>People have been dreaming of flight for over a 1000 years, but have only been able to make that dream come true for about the last 100  years. <strong>Make your dream come true today and start flying!</strong><br /><br />Contact: <a href="mail to: cficontreras@icloud.com">cficontreras@icloud.com</a> or call (831)776-9972 any day of the week.</p>
-          </div>
-          <div class="col-md-3">
-            <p>I will be glad to answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods.</p>
-          </div>
-          <div class="col-md-2">
-            <ul class="footer-links">
-				          <li><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About Me</a></li>
-                  <li><a href="introFlight.html">Intro Flight</a></li>
-                  <li><a href="flightTraining.html">Flight Training</a></li>
-                  <li><a href="#">Pictures</a></li>
-				          <li><a href="#">Contact Me</a></li>
-            </ul>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <h2>CFI CONTRERAS</h2>
+                </div>
+                <div class="col-md-5">
+                    <p>People have been dreaming of flight for over a 1000 years, but have only been able to make that dream come true for about the last 100 years. <strong>Make your dream come true today and start flying!</strong><br /><br />Contact: <a
+                            href="mail to: cficontreras@icloud.com">cficontreras@icloud.com</a> or call (831)776-9972 any day of the week.</p>
+                </div>
+                <div class="col-md-3">
+                    <p>I will be glad to answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods.</p>
+                </div>
+                <div class="col-md-2">
+                    <ul class="footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Me</a></li>
+                        <li><a href="introFlight.html">Intro Flight</a></li>
+                        <li><a href="flightTraining.html">Flight Training</a></li>
+                        <li><a href="#">Pictures</a></li>
+                        <li><a href="contact.html">Contact Me</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/unslider.min.js"></script>
-  </body>
+</body>
+
 </html>
