--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Professional Flight Instructor in California's Central Coast</title>
-<meta charset="UTF-8">
-<meta name="description" content="Learn to Fly, take Flying Lessons, Flight Training, Fly Salinas, Fly Monterey Bay Area, Fly Santa Cruz, Bay Tours"/>
-    <meta name="keywords" content="Learn to Fly, Flying Lessons, Flight Training, Fly Salinas, Fly Monterey Bay, Flight Instructor, Cessna, pilot training,pilot license,pilot career,how to become a pilot,private pilot license,sport pilot,aviation jobs,aviation tours,learn to fly"/>
+    <meta charset="UTF-8">
+    <meta name="description" content="Learn to Fly, take Flying Lessons, Flight Training, Fly Salinas, Fly Monterey Bay Area, Fly Santa Cruz, Bay Tours" />
+    <meta name="keywords" content="Learn to Fly, Flying Lessons, Flight Training, Fly Salinas, Fly Monterey Bay, Flight Instructor, Cessna, pilot training,pilot license,pilot career,how to become a pilot,private pilot license,sport pilot,aviation jobs,aviation tours,learn to fly"
+    />
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/queries.css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-	  <!-- Fonts -->
+    <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Sintony:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -22,123 +24,131 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-		<header class="clearfix">
-		    <div class="logo col-md-3"><h2 class="logo-text">CFI CONTRERAS</h2></div>
-		    <nav class="clearfix">
+</head>
+
+<body>
+    <header class="clearfix">
+        <div class="logo col-md-3">
+            <h2 class="logo-text">CFI CONTRERAS</h2></div>
+        <nav class="clearfix">
             <ul class="clearfix">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="introFlight.html">Intro Flight</a></li>
                 <li><a href="flightTraining.html">Flight Training</a></li>
                 <li><a href="#">Pictures</a></li>
-                <li><a href="#" class="last">contact</a></li>
+                <li><a href="contact.html" class="last">contact</a></li>
             </ul>
         </nav>
         <div class="pullcontainer">
-        <a href="#" id="pull"><i class="fa fa-bars fa-2x"></i></a>
+            <a href="#" id="pull"><i class="fa fa-bars fa-2x"></i></a>
         </div>
-		</header>
+    </header>
     <div class="banner">
-    <ul>
-        <li style="background-image: url('img/01.jpg');">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3">
-                <div class="hero-title">
-                  FLIGHT TRAINING WILL ENRICHEN YOUR LIFE IN COUNTLESS WAYS
+        <ul>
+            <li style="background-image: url('img/01.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div class="hero-title">
+                                FLIGHT TRAINING WILL ENRICHEN YOUR LIFE IN COUNTLESS WAYS
+                            </div>
+                            <p class="hero-content">ALWAYS HAVE A STORY TO TELL</p>
+                        </div>
+                    </div>
                 </div>
-              <p class="hero-content">ALWAYS HAVE A STORY TO TELL</p>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li style="background-image: url('img/02.jpg');">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3">
-                <div class="hero-title">
-                  IMAGINE YOURSELF AS THE PILOT
+            </li>
+            <li style="background-image: url('img/02.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div class="hero-title">
+                                IMAGINE YOURSELF AS THE PILOT
+                            </div>
+                            <p class="hero-content">WHEN YOU LEARN TO FLY A WHOLE NEW WORLD IS OPEN TO YOU.</p>
+                        </div>
+                    </div>
                 </div>
-              <p class="hero-content">WHEN YOU LEARN TO FLY A WHOLE NEW WORLD IS OPEN TO YOU.</p>
-              </div>
-            </div>
-          </div>
-        </li>
-    </ul>
-</div>
+            </li>
+        </ul>
+    </div>
 
     <div class="text-inter">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Helping you realize the dream of learning to fly.</h3>
-          <p>Offering expert flying lessons in the Salinas/Monterey/Watsonville area. From earning your private pilot's certificate (license) through complex, high-performance, commercial, multi-engine, instrument rating, and flight instructor. I can give lessons to individuals 10 years and older.</p>
-		  <p>You can also schedule an <strong>introductory flight lesson</strong>. To purchase a <strong>gift certificate </strong>for an introductory flight <a href="mailto:cficontreras@icloud.com?Subject=Gift%20Certificate" target="_top">email me</a></p>
-          <div class="divider"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Helping you realize the dream of learning to fly.</h3>
+                    <p>Offering expert flying lessons in the Salinas/Monterey/Watsonville area. From earning your private pilot's certificate (license) through complex, high-performance, commercial, multi-engine, instrument rating, and flight instructor.
+                        I can give lessons to individuals 10 years and older.</p>
+                    <p>You can also schedule an <strong>introductory flight lesson</strong>. To purchase a <strong>gift certificate </strong>for an introductory flight <a href="mailto:cficontreras@icloud.com?Subject=Gift%20Certificate" target="_top">email me</a></p>
+                    <div class="divider"></div>
+                </div>
+                <div class="col-md-6">
+                    <h3>My goal is to see you succeed and accomplish what very few others have done.</h3>
+                    <p>I am a full-time, 7-day a week &quot;career&quot; flight instructor serving Salinas, Watsonville,and Montereys airports. I apply over 11 years of flying experience to help my clients quickly gain the knowledge and skill to fly safely,
+                        as a result of my handouts and one on one instruction.</p>
+                    <p>Click <a href="TSA Information for Flight Training.pdf" target="_blank">HERE</a> if you are a non-US citizen and would like to learn more about the TSA approval process for US flight training.</p>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6">
-          <h3>My goal is to see you succeed and accomplish what very few others have done.</h3>
-          <p>I am a full-time, 7-day a week &quot;career&quot; flight instructor serving Salinas, Watsonville,and Montereys airports. I apply over 11 years of flying experience to help my clients quickly gain the knowledge and skill to fly safely, as a result of my handouts and one on one instruction.</p>
-		  <p>Click <a href="TSA Information for Flight Training.pdf" target="_blank">HERE</a> if you are a non-US citizen and would like to learn more about the TSA approval process for US flight training.</p>
-        </div>
-      </div>
-    </div>
     </div>
     <div class="quote-container">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-          <div class="col-md-10 col-md-offset-1">
-            <div class="quote-slideshow">
-              <figure class="show"><h2>Sometimes, flying feels too godlike to be attained by man. Sometimes, the world from above seems too beautiful, too wonderful, too distant for human eyes to see … </h2>
-              <figcaption>
-                 Charles A. Lindbergh, The Spirit of St. Louis, 1953
-              </figcaption>
-              </figure>
-              <figure><h2>More than anything else the sensation is one of perfect peace mingled with an excitement that strains every nerve to the utmost, if you can conceive of such a combination.</h2>
-              <figcaption>
-                Wilbur Wright
-              </figcaption>
-              </figure>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-10 col-md-offset-1">
+                        <div class="quote-slideshow">
+                            <figure class="show">
+                                <h2>Sometimes, flying feels too godlike to be attained by man. Sometimes, the world from above seems too beautiful, too wonderful, too distant for human eyes to see … </h2>
+                                <figcaption>
+                                    Charles A. Lindbergh, The Spirit of St. Louis, 1953
+                                </figcaption>
+                            </figure>
+                            <figure>
+                                <h2>More than anything else the sensation is one of perfect peace mingled with an excitement that strains every nerve to the utmost, if you can conceive of such a combination.</h2>
+                                <figcaption>
+                                    Wilbur Wright
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                    <span class="quote-prev circle"><i class="fa fa-angle-left fa-2x"></i></span>
+                    <span class="quote-next circle"><i class="fa fa-angle-right fa-2x"></i></span>
+                </div>
             </div>
-            </div>
-            <span class="quote-prev circle"><i class="fa fa-angle-left fa-2x"></i></span>
-            <span class="quote-next circle"><i class="fa fa-angle-right fa-2x"></i></span>
-          </div>
         </div>
-      </div>
     </div>
     <div class="shadow"></div>
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <h2>CFI CONTRERAS</h2>
-          </div>
-          <div class="col-md-5">
-            <p>People have been dreaming of flight for over a 1000 years, but have only been able to make that dream come true for about the last 100  years. <strong>Make your dream come true today and start flying!</strong><br /><br />Contact: <a href="mail to: cficontreras@icloud.com">cficontreras@icloud.com</a> or call (831)776-9972 any day of the week.</p>
-          </div>
-          <div class="col-md-3">
-            <p>I will be glad to answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods.</p>
-          </div>
-          <div class="col-md-2">
-            <ul class="footer-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Me</a></li>
-              <li><a href="introFlight.html">Intro Flight</a></li>
-              <li><a href="#">Flight Training</a></li>
-              <li><a href="#">Pictures</a></li>
-              <li><a href="#">Contact Me</a></li>
-            </ul>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <h2>CFI CONTRERAS</h2>
+                </div>
+                <div class="col-md-5">
+                    <p>People have been dreaming of flight for over a 1000 years, but have only been able to make that dream come true for about the last 100 years. <strong>Make your dream come true today and start flying!</strong><br /><br />Contact: <a
+                            href="mail to: cficontreras@icloud.com">cficontreras@icloud.com</a> or call (831)776-9972 any day of the week.</p>
+                </div>
+                <div class="col-md-3">
+                    <p>I will be glad to answer your questions over the phone, or to meet with you for free to discuss your training needs and explain my syllabus, training handouts, videos, and teaching methods.</p>
+                </div>
+                <div class="col-md-2">
+                    <ul class="footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Me</a></li>
+                        <li><a href="introFlight.html">Intro Flight</a></li>
+                        <li><a href="flightTraining.html">Flight Training</a></li>
+                        <li><a href="#">Pictures</a></li>
+                        <li><a href="contact.html">Contact Me</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/unslider.min.js"></script>
-  </body>
+</body>
+
 </html>
