--- a/introFlight.html
+++ b/introFlight.html
@@ -33,7 +33,7 @@
                 <li><a href="introFlight.html" class="active">Intro Flight</a></li>
                 <li><a href="flightTraining.html">Flight Training</a></li>
                 <li><a href="#">Pictures</a></li>
-                <li><a href="#" class="last">contact</a></li>
+                <li><a href="contact.html" class="last">contact</a></li>
             </ul>
         </nav>
         <div class="pullcontainer">
@@ -199,7 +199,7 @@
                         <li><a href="introFlight.html">Intro Flight</a></li>
                         <li><a href="flightTraining.html">Flight Training</a></li>
                         <li><a href="#">Pictures</a></li>
-                        <li><a href="#">Contact Me</a></li>
+                        <li><a href="contact.html">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
